--- a/style.css
+++ b/style.css
@@ -14,11 +14,11 @@ html {
    flex-direction: column;
 }
 body {
-   background-image:    url('/bg1.png'),
-                        url('/bg2.png'),
-                        url('/bg3.png'),
-                        url('/bg4.png'),
-                        url('/bg0.png');
+   background-image:    url('./bg1.png'),
+                        url('./bg2.png'),
+                        url('./bg3.png'),
+                        url('./bg4.png'),
+                        url('./bg0.png');
    background-size: 15%, 15%, 15%, 15%, 100%;
    background-position:    left -1% top -15%,
                            right -7.5% top -1%,
