--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ body {
                         url('./bg3.png'),
                         url('./bg4.png'),
                         url('./bg0.png');
+   background-color: #ADD8E6;
    background-size: 15%, 15%, 15%, 15%, 100%;
    background-position:    left -1% top -15%,
                            right -7.5% top -1%,
